# wasi-data-sharing

./: Cargo.toml  LICENSE  README.md
examples/wasi/: main.rs  wire.rs
src/: main.rs
