[package]
name = "wasi-data-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "wasi"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0.56"
wasmtime = "0.35.2"
wasmtime-wasi = "0.35.2"
wasi-common = "0.35.2"
